--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - docker build -t paolodat/react-test -f ./client/Dockerfile.dev ./client
     
 script:
-    - docker run -e CI=true paolodat/react-test npm run test
+    - docker run -e CI=true paolodat/react-test npm test
 
 after_success:
     - docker build -t paolodat/multi-client ./client
