--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
     - docker push paolodat/multi-server
     - docker push paolodat/multi-worker
 
+deploy:
+    provider:  elasticbeanstalk
+    region: "us-east-2"
+    app: "multi-docker"
+    env: "MultiDocker-env"
+    bucket_name: "elasticbeanstalk-us-east-2-336580787795"
+    bucket_path: "multi-docker"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY  
+    secret_access_key: $AWS_SECRET_KEY 
+
